# SAHJONY-AI-TRADING

./:  .env.production  .env  .env.example  .env.local.example  .env.template  .gitignore  .vercelignore  AGENTS.md  ALPACA_CREDENTIALS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUNDING.md  GO_LIVE.md  LIVE.md  MULTI_ACCOUNT.md  README.md  SAAS.md  SCHEDULING.md  SPEC.md  SYSTEM_BLUEPRINT.yaml  SYSTEM_REPORT.md  accounts.yaml  advanced_trading_firm.py  app.py  autohedge_agents.py  autohedge_trading_system.py  config.js  config.py  copy_signals.json  db.py  docker-compose.yml  email_outreach.py  enhanced_strategy.py  enhanced_trading_system.py  eslint.config.mjs  generate_report.py  index.html  investor.html  jest.config.js  (+35 more)
.claude/: settings.json
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
accounts/: orchestrator.py
api/: broker-evidence.py  index.py  promotion-status.py  runtime-status.py
app/: layout.tsx  page.tsx
backend/: alpaca_ws.py  ccxt_client.py  main.py  requirements.txt
config/: .env
core_engine/: Dockerfile  requirements.txt
crm/: __init__.py  crm.py
dashboard/: __init__.py  account_aggregator.py  update_accounts.py
data/: account_balances.yaml  daily_report.txt  state_1780777794.json  store.json  trading_firm.db
data-pipeline/: docker-compose.yml
database/: __init__.py  db.py
desks/: alpaca-equities.env.example  robinhood-agentic.env.example  robinhood-crypto.env.example
docker/: docker-compose.yml
docs/: ROBINHOOD_ACCOUNT_ACTIVATION.md
execution/: control_simulator.py  cost_model.py  idempotency.py  production_adapter.py  robinhood_review_gate.py  router.py
execution-engine/: Cargo.toml  config.toml
execution-engine/src/: lib.rs  main.rs  types.rs  utils.rs
execution-engine/src/config/: mod.rs
execution-engine/src/events/: consumer.rs  mod.rs  producer.rs  schema.rs
execution-engine/src/market_data/: feed_handler.rs  mod.rs  normalizer.rs  order_book.rs  tick_store.rs
execution-engine/src/metrics/: mod.rs
execution-engine/src/order/: gateway.rs  manager.rs  mod.rs  router.rs  types.rs
execution-engine/src/risk/: circuit_breaker.rs  drawdown.rs  kelly.rs  mod.rs  position_limits.rs  risk_engine.rs  var.rs
frontend/: package-lock.json  package.json  tsconfig.json
hermes-deployment/: .env.example  .render.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yml  railway.json  render.yaml
intelligence/: advisors.py  agents.py  ai_brain.py  alt_data.py  autonomous_learning.py  engines.py  global_performance.py  hermes.py  historical_data.py  institutional_research.py  knowledge.py  promotion_pipeline.py  (+6 more)
(+458 files in other folders)
