[package]
name = "execution_engine"
version = "0.1.0"
edition = "2021"
description = "Layer 1 - Execution & Risk Fabric: Ultra-low latency trading execution engine with integrated risk management"

[dependencies]
# ── Async Runtime ──
tokio = { version = "1.35", features = ["full", "tracing", "sync"] }

# ── Serialization ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation", "size_32", "std"] }

# ── Protobuf ──
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", optional = true }

# ── Messaging & Streaming ──
rdkafka = { version = "0.36", features = ["ssl", "sasl", "gssapi", "cmake-build"] }

# ── Math & Stats ──
ndarray = { version = "0.15", features = ["approx", "serde"] }
ndarray-stats = "0.5"
nalgebra = "0.32"
statrs = "0.16"
rust_decimal = { version = "1.34", features = ["serde"] }
rust_decimal_macros = "1.34"

# ── Data Structures ──
dashmap = "5.5"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-deque"] }
crossbeam-channel = "0.5"
intrusive-collections = "0.9"
lru = "0.12"
slotmap = "1.0"
arrayvec = "0.7"

# ── Time ──
chrono = { version = "0.4", features = ["serde", "clock"] }
hdrhistogram = "7.5"

# ── Configuration ──
config = { version = "0.14", features = ["toml", "json", "yaml"] }
toml = "0.8"

# ── Observability ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# ── Utilities ──
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
itertools = "0.12"
log = "0.4"

# ── Networking ──
socket2 = { version = "0.5", features = ["all"] }

# ── Time-Series DB Client (QuestDB / InfluxDB) ──
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.5"

# ── Optional: kdb+ IPC ──
# kdb-rs = { git = "https://github.com/...", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"
rand = "0.8"
proptest = "1.4"
mockall = "0.12"

[features]
default = ["kafka"]
kafka = ["rdkafka"]
questdb = ["reqwest"]
grpc = ["tonic"]
kdb = []  # Placeholder for kdb+ IPC support

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bench]]
name = "order_book_bench"
harness = false

[[bench]]
name = "risk_engine_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false
